<resources>
    <string name="app_name">smack-android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message_hint">message:</string>
    <string name="send_message_button">send message button</string>
    <string name="add_channel_button">add channel button</string>
    <string name="username">username</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="create_user_avatar_image">create user avatar image</string>
    <string name="create_user">Create User</string>
</resources>
